hnc-system/hnc-system_v1_Namespace_hnc-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
  labels:
    control-plane: controller-manager
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.23
  name: hnc-system
  namespace: hnc-system
