hnc-system/hnc-system_v1_Service_hnc-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '8080'
    prometheus.io/scheme: http
    prometheus.io/scrape: 'true'
  labels:
    control-plane: controller-manager
  name: hnc-controller-manager-metrics-service
  namespace: hnc-system
spec:
  ports:
  - name: metrics
    port: 8080
    targetPort: metrics
  selector:
    control-plane: controller-manager
